# FIX-Gateway

./: .gitignore  AUTHORS  LICENSE  MANIFEST.in  Makefile  README  README.md  README.rst  TODO  buildall.sh  data.json  endpoint.json  fixGw.py  fixgw.py  fixgwc.py  pyproject.toml  requirements.txt  setup.py  yamlmaker.py
config/: default.db  default.yaml  fg_172.ini  main.yaml
contrib/: fixgateway.service
doc/: client.rst  conf.py  database.rst  getting_started.rst  intro.rst  keys.rst  plugin.rst  snapcraft.md  toc.rst
extras/: README.md
fixgw/: cfg.py  client.py  database.py  netfix.py  plugin.py  server.py  status.py  version.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_0177d530653199e8_BNO055_py.html  z_098982944a37dc11___init___py.html  z_0f6fe5c93f3e00d4___init___py.html  z_0f6fe5c93f3e00d4_cfg_py.html  z_0f6fe5c93f3e00d4_database_py.html  z_0f6fe5c93f3e00d4_plugin_py.html  z_0f6fe5c93f3e00d4_quorum_py.html  z_0f6fe5c93f3e00d4_server_py.html  z_0f6fe5c93f3e00d4_status_py.html  z_0f6fe5c93f3e00d4_version_py.html  z_13718aa023c7b025___init___py.html  z_13718aa023c7b025_rdac_py.html  z_13718aa023c7b025_tables_py.html  z_1cf8ec93378454e2___init___py.html  z_1dbcd429b8f861f4___init___py.html  z_2b065aefacef67b4_Mav_py.html  z_2b065aefacef67b4___init___py.html  z_338401f99467aca1___init___py.html  z_34419575c0bb14d5___init___py.html  z_3499612fbb97d841___init___py.html  z_4056ccb530ce7cd3___init___py.html  z_40fb1bbed9707e62_MCP3008_py.html  z_40fb1bbed9707e62___init___py.html  z_41928053eb637905___init___py.html  z_43852d22f8500d3f___init___py.html  z_44725fa59b0976dd___init___py.html  z_5880f21f690f26d6___init___py.html  z_5a6899d6dd2d1ced___init___py.html  z_5a6899d6dd2d1ced_megasquirt_py.html  z_5a6899d6dd2d1ced_tables_py.html  z_5b48370ce15bffc7___init___py.html  z_5f1c03e95403ba5f___init___py.html  z_5f1c03e95403ba5f_mapping_py.html  z_7a7b683652eaa1a7___init___py.html  z_8d3277d4cd0b8790___init___py.html  z_98715083f41b0312___init___py.html  (+34 more)
snap/: snapcraft.yaml
src/: config  database.py  fg_canfix.py  fixgw  fixgw.py  fixgwc  main.cfg  netfix.py  plugin.py  simloop.py  status.py
tests/: conftest.py  test_canfix.py  (+12 more)
(+398 files in other folders)
